# Better-Code

./: .gitignore  AGENT_API_SCHEMA.md  AI_AGENT_CONTEXT.md  BetterCode.spec  README.md  VALIDATION_GAPS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-desktop.yml
bettercode/: .env  app.py  batch_optimize_executor.py  graph_analysis.py  i18n.py  model_config_store.py  models.py  optimization_history.py  optimize_executor.py  parser.py  task_graph.py  task_planner.py  translation_executor.py
bettercode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bettercode/agent_api/: project_analysis.py
bettercode/cli/: cmd_analyze_project.py  cmd_config.py  main.py
bettercode/config/: config.yaml
bettercode/llm/: __init__.py  anthropic_client.py  base.py  config.py  config_manager.py  factory.py  schema.py  (+2 more)
bettercode_agent_api/: README.md  __init__.py  __main__.py  graph_analysis.py  models.py  parser.py  project_analysis.py  task_graph.py  task_planner.py
scripts/: build_desktop.py
tests/: test_agent_api.py  test_cli_analyze_project.py  test_code_block_dialog.py  test_detail_panel.py  test_graph_analysis.py  test_graph_view_labels.py  test_graph_view_selection.py  test_llm_client.py  test_llm_factory.py  test_llm_gateway.py  test_main_window_i18n.py  test_optimization_review_dialog.py  test_optimize_executor.py  test_parser.py  test_standalone_agent_api.py  test_subsystem_view.py  test_task_batch_view.py  test_task_detail_panel.py  test_task_graph.py  test_task_graph_view.py  test_task_planner.py  test_translation_executor.py
(+33 files in other folders)
